# Kursova_OOP

./: CMakeLists.txt  alphabetanalyzer.cpp  alphabetanalyzer.h  charreplacer.cpp  charreplacer.h  checker.txt  digitcounter.cpp  digitcounter.h  main.cpp  mainwindow.cpp  mainwindow.h  sentencecounter.cpp  sentencecounter.h  task.txt  textanalyzer.cpp  textanalyzer.h  textconverter.cpp  textconverter.h  wordreplacer.cpp  wordreplacer.h
